gcc/testsuite/algol68/compile/error-vacuum-3.a68
begin struct(int i, real r) foo = (); { dg-error "" }
      skip
end
